--- a/00-revisao-js/index.html
+++ b/00-revisao-js/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <span id="target"></span>
+    <!-- targets -->
+    <span class="target"></span>
+    <span class="target"></span>
+    <span class="target"></span>
     <script src="script.js"></script>
 </body>
 </html>
