--- a/00-revisao-js/index.html
+++ b/00-revisao-js/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
     <span id="target"></span>
-    <!-- targets -->
-    <span class="target"></span>
-    <span class="target"></span>
-    <span class="target"></span>
-    <script src="script.js"></script>
+
+    <script type="module" src="modules.js"></script>
 </body>
 </html>
