--- a/01-react-for-beginners/00-adicionar-react/index.html
+++ b/01-react-for-beginners/00-adicionar-react/index.html
@@ -18,11 +18,33 @@
     <!-- "Chamando o script Babel" -->
     <script type="text/babel">
 
-        // forma mais usada
-        const Button = () => {
-            return <button>Comprar</button>
+        // criando elemento Compras
+        const Compras = () => {
+            const [contador, setContador] = React.useState(e);
+
+            function comprar(){
+                setContador(contador + 1)
+            }
+
+            return(
+                <div>
+                    <button onClick={comprar}>Comprar</button>
+                    <p>Total: {contador}</p>
+                    <p>Preço: R$ {contador * 250}</p>
+                </div>
+            )
         }
 
+        // Criando elemento Button
+        const Button = () => {
+            function handleClick(event){
+                console.log(event.target.innerText);
+            }
+
+            return <button onClick={handleClick}>Comprar</button>
+        }
+
+        // Criando elemento Titulo
         const Titulo = () => {
             const numero = Math.random() * 1000
             return <h1>Meu título {numero}</h1>
@@ -31,7 +53,9 @@
         const App = () => {
             return <div>
                 Meu App
-                <Titulo />
+                <Compras />
+                <Titulo /> {/* utilizando elemento Titulo */}
+                {/* reutilizando o componente button */}
                 <Button/>
                     <div>
                         Compre aqui também.
