--- a/01-react-for-beginners/00-adicionar-react/index.html
+++ b/01-react-for-beginners/00-adicionar-react/index.html
@@ -20,7 +20,7 @@
 
         // criando elemento Compras
         const Compras = () => {
-            const [contador, setContador] = React.useState(e);
+            const [contador, setContador] = React.useState(0);
 
             function comprar(){
                 setContador(contador + 1)
