--- a/01-react-for-beginners/02-react-e-javascript/index.html
+++ b/01-react-for-beginners/02-react-e-javascript/index.html
@@ -10,13 +10,14 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
-    <!-- COM JAVASCRIPT PURO -->
+    <!-- COM JAVASCRIPT PURO: CÓDIGO MAIS EXTENSO -->
     <div id="app-javascript">
         <p>Total: <span id="total"></span></p>
         <p>Preço: R$ <span id="preco"></span></p>
         <button id="button">Comprar</button>
     </div>
     <script type="application/javascript">
+
         const total = document.getElementById('total');
         const preco = document.getElementById('preco');
         const button = document.getElementById('button');
@@ -36,9 +37,10 @@
         }
 
         button.addEventListener('click', handleClick)
+         
     </script>
 
-    <!-- COM REACT -->
+    <!-- COM REACT: CÓDIGO MAIS ENXUTO -->
     <div id="app-react"></div>
 
     <script type="text/babel">
